Switch to use base path

--- a/web/templates/form_beamline.tmpl
+++ b/web/templates/form_beamline.tmpl
@@ -1,5 +1,5 @@
 <div class="form-container center-70">
-<form class="form-content" method="post" action="process">
+    <form class="form-content" method="post" action="{{.Base}}/process">
 
     {{.Form}}
 
