--- a/web/templates/login.tmpl
+++ b/web/templates/login.tmpl
@@ -2,7 +2,7 @@
 
 <br/>
 <div class="is-70 is-center">
-<form method="post" action="auth">
+    <form method="post" action="{{.Base}}/auth">
     <fieldset>
         <legend>CLASSE credentials</legend>
         <div class="form-item">
