--- a/web/templates/bottom.tmpl
+++ b/web/templates/bottom.tmpl
@@ -3,7 +3,7 @@
 <hr class="line" />
 <div class="is-70 is-center is-small is-text-center">
     Copyright &#169; Cornell Laboratory for Accelerator-based Sciences and Education
-    Supported by: <img src="/images/nsf_logo.png" alt="NSF" width="30">
+    Supported by: <img src="{{.Base}}/images/nsf_logo.png" alt="NSF" width="30">
 </div>
 <!-- end of bottom.tmpl -->
 </body>
