--- a/web/templates/keys.tmpl
+++ b/web/templates/keys.tmpl
@@ -5,7 +5,7 @@
 
     <div class="">
         <div>
-        <img src="images/chess-logo.png" width="200px" alt="CHESS MetaData" />
+            <img src="{{.Base}}/images/chess-logo.png" width="200px" alt="CHESS MetaData" />
         </div>
     <h3>Beamlines</h3>
     <select id="beamlines" class="is-50" onChange="selectBeamline();">
@@ -19,7 +19,7 @@
     <br/>
 
     <div>
-    <form class="form-content" method="post" action="api" enctype="multipart/form-data">
+        <form class="form-content" method="post" action="{{.Base}}/api" enctype="multipart/form-data">
         <h3>Upload spec file</h3>
         <br/>
         <div class="form-item">
@@ -39,7 +39,7 @@
     </div>
 
     <div>
-    <form class="form-content" method="post" action="json" enctype="multipart/form-data">
+        <form class="form-content" method="post" action="{{.Base}}/json" enctype="multipart/form-data">
         <h3>Use JSON file</h3>
         <br/>
         <div class="form-item">
