Add example of regex pattern

--- a/web/templates/searchform.tmpl
+++ b/web/templates/searchform.tmpl
@@ -40,6 +40,9 @@ Email:user@gmail.com Proposal:12345 mydescription
 
 # search for specific condition, e.g. "key" value is greater than one
 {"key": {"$gt": 1}}
+
+# search using regex patterns, e.g.
+{"dataset":{"$regex":".*sample-tlyhrzpbwc01zbpi"}}
 </pre>
 </div>
 <br/>
