--- a/web/templates/keys.tmpl
+++ b/web/templates/keys.tmpl
@@ -29,7 +29,7 @@
         <div class="form-item">
             <div class="is-append is-push-right is-right">
                 <div class="is-80">
-                    <input type="hidden" id="FormSchemaName" name="SchemaName" value=""/>
+                    <input type="hidden" id="Form1SchemaName" name="SchemaName" value=""/>
                     <input type="hidden" name="User" value="{{.User}}"/>
                 </div>
                 <button class="button is-small">Submit</button>
@@ -49,7 +49,7 @@
         <div class="form-item">
             <div class="is-append is-push-right is-right">
                 <div class="is-80">
-                    <input type="hidden" id="FormSchemaName" name="SchemaName" value=""/>
+                    <input type="hidden" id="Form2SchemaName" name="SchemaName" value=""/>
                     <input type="hidden" name="User" value="{{.User}}"/>
                 </div>
                 <button class="button is-small is-secondary is-gray">Upload</button>
@@ -117,7 +117,9 @@ function selectBeamline()
 function setSchemaName()
 {
     var docs=document.getElementById("beamlines");
-    var sdoc=document.getElementById("FormSchemaName");
+    var sdoc=document.getElementById("Form1SchemaName");
+    sdoc.value=docs.value;
+    var sdoc=document.getElementById("Form2SchemaName");
     sdoc.value=docs.value;
 }
 setSchemaName();
